--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 					{% include navigation.html %}
 				</section>
 				<section class="hero_search">
-					<h1>Tutorials</h1>
-					<p>Everything you need to know about running our software.</p>
+					<h1>Resources </h1>
+					<p>Resources: tutorials, posts, snippets that simplifies your task </p>
 					{% include search.html %}
 				</section>
 			</div>
