--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -11,7 +11,7 @@
 header {
 	padding: 16px 0 10px 0;
 	background: $header-color;
-	color: #fff;
+	color: #fff000;
 
 	form {
 		position: relative;
