--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
 					{% include navigation.html %}
 				</section>
 				<section class="hero_search">
-					<h1>Resources </h1>
-					<p>Resources: tutorials, posts, snippets that simplifies your task </p>
+					<h1>Resources | Experiences  </h1>
+					<p>Resources: tutorials, posts, snippets that simplifies your task and my experiences  </p>
 					{% include search.html %}
 				</section>
 			</div>
