--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 				</section>
 				<section class="hero_search">
 					<h1>Resources | Experiences  </h1>
-					<p>Resources: tutorials, posts, snippets that simplifies your task and my experiences  </p>
+					<p> Tutorials, posts, snippets and  my experiences on various topics </p>
 					{% include search.html %}
 				</section>
 			</div>
